--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 .stk-page-header {
   background-color: black;
   background-image: none;
+  height: auto;
 }
 
 /* For body */
@@ -14,6 +15,14 @@
 .stk-text-listHeaderTitle,
 .stk-text-listHeaderDesc {
   font-family: "Gilroy", "Helvetica", "sans-serif";
+}
+
+.stk-text-listHeaderTitle {
+  font-size: 1.5rem;
+}
+
+.stk-text-listHeaderDesc {
+  font-size: 1rem;
 }
 
 .stk-button {
