--- a/style.css
+++ b/style.css
@@ -1,28 +1,9 @@
 /* https://docs.stacker.app/customizing-your-app/features/custom-css */
 
-.stk-page-header {
-  background-color: black;
-  background-image: none;
-  height: auto;
-}
+/* misc */
 
-/* For body */
 .stk-text {
   font-family: "Open Sans", "Helvetica", "sans-serif";
-}
-
-/* For headers*/
-.stk-text-listHeaderTitle,
-.stk-text-listHeaderDesc {
-  font-family: "Gilroy", "Helvetica", "sans-serif";
-}
-
-.stk-text-listHeaderTitle {
-  font-size: 1.5rem;
-}
-
-.stk-text-listHeaderDesc {
-  font-size: 1rem;
 }
 
 .stk-button {
@@ -45,4 +26,46 @@
   transition: all 0.3s;
   color: #89e5d3;
   border-color: #89e5d3;
+}
+
+/* Banner */
+.stk-page-header {
+  background-color: black;
+  background-image: none;
+  height: auto;
+}
+
+/* For headers*/
+.stk-text-listHeaderTitle,
+.stk-text-listHeaderDesc {
+  font-family: "Gilroy", "Helvetica", "sans-serif";
+}
+
+.stk-text-listHeaderTitle {
+  font-size: 1.5rem;
+}
+
+.stk-text-listHeaderDesc {
+  font-size: 1rem;
+}
+
+.stk-header {
+  background-color: black;
+}
+
+/* Pages */
+
+.stk-content {
+  background-color: #fafafa;
+}
+
+/* Navbar */
+
+/* @toimprove remove selection with hash*/
+.css-sval3o.e1srdwdd0 {
+  background: black;
+}
+
+.stk-text.stk-text-internalNavLabel {
+  color: #fafefd;
 }
